# Polarization-of-Gravitational-Waves

./: .gitignore  4point_function_eval.nb  AI.tex  Different spectra.md  LICENSE  Presentation.tex  README.md  bib.bib  conftest.py  debug_mu.py  derivation.tex  kahniashvili2008_implementation.ipynb  kahniashvili2008_implementation_executed.ipynb  main.tex  mhd_ir_analytical.tex  paper.tex  problem_sets.ipynb  problem_sets.md  problem_sets_solutions.ipynb  pyproject.toml  requirements.txt  spectra_explorer.ipynb  spectre_manual.ipynb  test_integral_simple.py  test_mu_integral.py  test_rational.py  test_with_exp.py  variables_table.tex  verify_mu_integral.py
Notebooks/: _fullspectrum_kernel.py  all_spectra.py  decaying_amplitude.py  decaying_direct_numerical_integration.ipynb  decaying_gw_modular.ipynb  decaying_selfsimilar_derivation.ipynb  decaying_turbulence_gw_spectrum_analytic.ipynb  delta_spectrum_selfsimilar.ipynb  digitize_roperpol.py  explore_selfsimilar_widep.py  f_peak_model_difference.py  f_peak_vs_tau_mach.py  fullspatial_decay.py  fullspatial_selfsimilar.py  fullspatial_selfsimilar_exact.py  gogoberidze2007.ipynb  gw_peak_vs_mach.py  ir_slope_diagnostics.py  kahniashvili2008.ipynb  kahniashvili2008_implementation_executed.ipynb  m_spectra.py  magnetic_field_setup.ipynb  mhd_inverse_transfer.py  mhd_scaledependent.py  peak_reconciliation.py  roperpol_comparison.py  roperpol_convention_spectra.py  roperpol_data.py  roperpol_fig1_fluid.csv  roperpol_fig1_gw.csv  roperpol_multirun.py  selfsimilar_hybrid.py  spectra_explorer.ipynb  spectre_manual.ipynb  (+3 more)
(+45 files in other folders)
