[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gw-turbulence"
version = "0.1.0"
description = "Numerical kernels for gravitational waves from turbulent sources (stationary and decaying MHD turbulence)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Murman Gurgenidze", email = "mgurgeni@andrew.cmu.edu" }]
keywords = ["gravitational-waves", "turbulence", "cosmology", "MHD", "early-universe"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "mpmath>=1.2",
    "matplotlib>=3.5",
    "sympy>=1.9",
    "pillow>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
mpi = ["mpi4py>=3.1"]

[project.scripts]
gw-turbulence = "gw_turbulence.cli:main"

[project.urls]
Repository = "https://github.com/shturman99/Polarization-of-Gravitational-Waves"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["gw_turbulence*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
